time stamps added - delay isolated (t4 in MSM)